[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/Menu.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Font/AvayxGodot.tres" type="DynamicFont" id=2]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1Selector/Nivel4.gd" type="Script" id=3]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1Selector/Nivel5.gd" type="Script" id=4]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1Selector/Nivel1.gd" type="Script" id=5]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1Selector/Atras.gd" type="Script" id=6]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1Selector/Nivel3.gd" type="Script" id=7]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1Selector/Nivel2.gd" type="Script" id=8]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo3Selector/SelectorNiveles3.gd" type="Script" id=9]
[ext_resource path="res://Assets/Font/new_dynamicfont.tres" type="DynamicFont" id=10]

[node name="Control" type="Container"]
anchor_left = 0.00109613
anchor_right = 1.0011
anchor_bottom = 1.0
margin_left = 4.21701
margin_right = 346.215
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 502.635, 301.911 )
scale = Vector2( 0.776, 0.821 )
texture = ExtResource( 1 )

[node name="Titulo" type="Label" parent="."]
margin_left = 400.0
margin_top = 50.0
margin_right = 642.0
margin_bottom = 67.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 2 )
text = "SELECCIONE NIVEL"

[node name="Atras" type="Label" parent="."]
margin_left = 600.0
margin_top = 500.0
margin_right = 704.0
margin_bottom = 537.0
custom_fonts/font = ExtResource( 2 )
text = "Atras
"
script = ExtResource( 6 )

[node name="Nivel2" type="Label" parent="."]
margin_left = 600.0
margin_top = 200.0
margin_right = 658.0
margin_bottom = 217.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel"
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Nivel2"]
margin_left = 100.0
margin_top = -3.0
margin_right = 140.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 10 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel1" type="Label" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 458.0
margin_bottom = 217.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel"
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Nivel1"]
margin_left = 100.0
margin_top = -3.0
margin_right = 140.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 10 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel3" type="Label" parent="."]
margin_left = 800.0
margin_top = 200.0
margin_right = 858.0
margin_bottom = 217.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel"
script = ExtResource( 7 )

[node name="Label" type="Label" parent="Nivel3"]
margin_left = 100.0
margin_top = -3.0
margin_right = 140.0
margin_bottom = 56.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 10 )
text = "3
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel4" type="Label" parent="."]
margin_left = 500.0
margin_top = 400.0
margin_right = 558.0
margin_bottom = 417.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Nivel4"]
margin_left = 100.0
margin_top = -3.0
margin_right = 140.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 10 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel5" type="Label" parent="."]
margin_left = 700.0
margin_top = 400.0
margin_right = 758.0
margin_bottom = 417.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel"
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Nivel5"]
margin_left = 100.0
margin_top = -3.0
margin_right = 140.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 10 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}
